# electronic-io

electronic_io/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
electronic_io/doc/: api.rst  devices.rst  index.rst  virtual_pins.rst
electronic_io/examples/: smart_battery.launch  smart_battery.yaml  smart_battery_board.yaml  tradr_ft232h.launch  tradr_ft232h.yaml  tradr_ft232h_board.yaml  tradr_spinel.launch  tradr_spinel.yaml  tradr_spinel_board.yaml
electronic_io/nodes/: devices  fake_io_board
electronic_io/src/electronic_io/: __init__.py  core.py  device.py  io_board_client.py  io_board_server.py  pins.py
electronic_io/src/electronic_io/devices/: ampere_meter.py  battery.py  dimmable_led.py  output_group.py  power_switch.py  thermometer.py  voltmeter.py
electronic_io/src/electronic_io/virtual_pins/: binary_pwm.py  digital_pin_combo.py  linear_adc_pin.py
electronic_io_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
electronic_io_msgs/msg/: DigitalIOInfo.msg  DigitalReading.msg  DigitalWrite.msg  DigitizedAnalogIOInfo.msg  DigitizedAnalogReading.msg  DigitizedAnalogWrite.msg  IOInfo.msg  IOPinInfo.msg  RawAnalogIOInfo.msg  RawAnalogReading.msg  RawAnalogWrite.msg  Readings.msg
electronic_io_msgs/srv/: Read.srv  Write.srv
